# Calculation-of-HDX-series

./: README.md  pyproject.toml
data/: HDX_1.csv  HDX_2.csv  Test-samples.csv
notebooks/: HDX_project_GIT.ipynb
results/: Results-HDX.csv
src/hdx/: utils_series_HDX.py
