[project]
name = "hdx"
version = "0.1.0"
description = "Default template for PDM package"
authors = [
    {name = "Alexander Zherebker", email = "az459@cam.ac.uk"},
]
dependencies = [
    "jupyterlab>=4.2.5",
    "numpy>=2.1.1",
    "pandas>=2.2.2",
    "tqdm>=4.66.5",
    "matplotlib>=3.9.2",
]
requires-python = "==3.11.*"
readme = "README.md"
license = {text = "MIT"}


[tool.pdm]
distribution = false

[tool.pdm.dev-dependencies]
dev = [
    "-e file:///${PROJECT_ROOT}/#egg=hdx",
]
